# ChemOS2.0

./: .gitignore  README.md  pyproject.toml
ChemOS2.0-deploy/opticaltable/: pyproject.toml  run_socket_server.py  setup.py  start_server.py
ChemOS2.0-deploy/opticaltable/completed_folder/: BSBCz_23-07-24-14-40.json  BSBCz_23-07-24-16-28.json  BSBCz_23-07-24-16-29.json  BSBCz_C01323-06-27-12-00.json  BSBCz_derivative.json  BSBCz_derivative_23-07-12-21-06.json  BSBCz_derivative_23-07-13-13-55.json  BSBCz_derivative_23-07-13-15-22.json  BSBCz_derivative_23-07-20-17-59.json  BSBCz_derivative_23-07-24-12-02.json  blank_23-07-20-15-18.json  char_2nd_test.json  demo_may_17.json  demo_sergio.json  malcolm first run.json  malcolm second run.json  malcolm_test_final.json  malcolm_test_processing3.json  test_fsk_malcolm.json
ChemOS2.0-deploy/opticaltable/log/: 20230515.txt  20230516.txt  20230517.txt  20230612.txt  20230627.txt  20230712.txt  20230713.txt  20230720.txt  20230724.txt
ChemOS2.0-deploy/opticaltable/optical_characterization/: absorption_and_PL_ocean.py  logger.py  optical_measurement.py
ChemOS2.0-deploy/opticaltable/sila2OpticsTable/: __main__.py  server.py
ChemOS2.0-deploy/sila-sensor/: pyproject.toml  sensor.sila.xml  start_server.py
ChemOS2.0-deploy/sila-sensor/silasensor/: server.py
ChemOS2.0-simulation-errors/sila-atlas/: ChemOScampaign.py  atlas_sila_pkg_.sila.xml  pyproject.toml  start_server.py
ChemOS2.0-simulation-errors/sila-atlas/SilaAtlas/: server.py
ChemOS2.0-simulation-errors/sila-optics/: hplcms.sila.xml  logger.py  optics.crt  optics2.sila.xml  pyproject.toml  run_socket_server.py  start_server.py  test.py
ChemOS2.0-simulation-errors/sila-optics/SilaOpticsTable/: server.py
ChemOS2.0-simulation-errors/sila-optics/input_folder/: .txt
echem_data/: 15.pkl  (+11 more)
(+1016 files in other folders)
