[project]
name = "sila2OpticsTable"
version = "0.0.0"
requires-python = ">=3.7"
dependencies = [
    "sila2",
    "typer",
]

[build-system]
requires = ["setuptools>=0.61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sila2OpticsTable*"]

[tool.setuptools.package-data]
"sila2OpticsTable.generated" = [
    "*/*.sila.xml",
    "*/*.proto",
]
