[project]
name = "SilaOpticsTable"
version = "0.0.0"
requires-python = ">=3.7"
dependencies = [
    "sila2",
    "typer",
]

[build-system]
requires = ["setuptools>=0.61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["SilaOpticsTable*"]

[tool.setuptools.package-data]
"SilaOpticsTable.generated" = [
    "*/*.sila.xml",
    "*/*.proto",
]
